# specledger

./: .gitattributes  .gitignore  .golangci.yml  .goreleaser.yaml  .mcp.json  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FORK.md  GOVERNANCE.md  GUIDELINES.md  LICENSE  MIGRATION.md  Makefile  NOTICE  README.md  REPORT-Spec-Dependency-Linking-Plan-Execution.md  SECURITY.md  codecov.yml  go.mod  go.sum  init.sh  mise.toml  package.json  rehash.md  release-please-config.json  revision-prompt.md  skills-lock.json  sl
.beads/: .gitignore  REPORT-Spec-Dependency-Linking-State.md  beads.db-shm  beads.db-wal  config.yaml  deletions.jsonl  issues.jsonl  last-touched  metadata.json  sync-state.json
.claude/: commands  settings.json  settings.local.json  skills
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.perles/: config.yaml
.specledger/: FORK.md
cmd/: main.go
docs/: index.md
homebrew/: README.md  specledger.rb
init/: prompt-01.md  prompt-02.md
pkg/embedded/templates/ai-chatbot/: AGENTS.md  README.md  langgraph.json  pyproject.toml  requirements.txt
pkg/embedded/templates/ai-chatbot/configs/: example.env
pkg/embedded/templates/ai-chatbot/src/agents/: base.py
pkg/embedded/templates/ai-chatbot/src/integrations/web/: app.py
pkg/embedded/templates/ml-image/: AGENTS.md  README.md  pyproject.toml  requirements.txt
pkg/embedded/templates/ml-image/src/data/: dataset.py
pkg/embedded/templates/ml-image/src/models/: cnn_model.py
pkg/embedded/templates/ml-image/src/training/: train.py
(+870 files in other folders)
